# MetaCheck

./: Dockerfile  README.md  pyproject.toml
src/backend/: main.py
src/backend/craap/: main.py
src/backend/craap/api/: analyzer.py
src/backend/craap/api/v1/: analyzer.py  metrics.py
src/backend/craap/model/: data_model.py
src/backend/craap/processing/: check_reputation.py  check_spamhaus.py  extractor.py
src/frontend/page/: about-craap.html  app.js  main-page.html  styles.css
src/frontend/simple-craap/: background.js  manifest.json  popup.html  popup.js
src/frontend/simple_extension/: background.js  manifest.json  popup.html  popup.js
